Integration tests can now be run from within the IDE (with some setup)